Fixed bug that made new project and run titles invisible initially after creating a new run or copying a project
- Hid the project details dialog when user launches the create run dialog so we don't have stacked dialogs
- Removed some unused

--- a/src/main/webapp/site/src/style/abstracts/_mixins.scss
+++ b/src/main/webapp/site/src/style/abstracts/_mixins.scss
@@ -124,10 +124,6 @@
     transition: 1s background-color;
   }
 
-  .highlighted {
-    background-color: map-get($colors, highlighted);
-  }
-
   .mat-button, .mat-raised-button, .mat-flat-button, .mat-stroked-button {
     min-width: 0;
   }
